# lab-04-boost-filesystem

./: CMakeLists.txt
include/: ftp-explorer-lib.hpp
include/ftp-explorer-lib/: FtpData.hpp  FtpFileInfo.hpp
scripts/: checks.sh
sources/: ftp-explorer-lib.cpp  main.cpp
sources/ftp-explorer-app/: main.cpp
sources/ftp-explorer-lib/: FtpData.cpp  FtpFileInfo.cpp
tests/: ftp-explorer-lib-test.cpp
tests/ftp-explorer-lib/: FtpFileInfoTest.cpp
