cmake_minimum_required(VERSION 3.4)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

option(BUILD_COVERAGE "Build coverage" OFF)

set(
        HUNTER_CACHE_SERVERS
        "https://github.com/bmstu-iu8-cpp-sem-3/hunter-cache"
        CACHE STRING "Default cache server"
)

include("tools/gate/cmake/HunterGate.cmake")

HunterGate(
        URL "https://github.com/cpp-pm/hunter/archive/v0.23.271.tar.gz"
        SHA1 "2d6686024529b471e0cc3a4fc07d4d64b62a53ee"
)

project(ftp-explorer-lib)
project(ftp-explorer-app)
string(APPEND CMAKE_CXX_FLAGS " -pedantic -Werror -Wall -Wextra")
string(APPEND CMAKE_CXX_FLAGS " -Wno-unused-command-line-argument")
string(APPEND CMAKE_CXX_FLAGS " -Wshadow -Wnon-virtual-dtor")

hunter_add_package(Boost COMPONENTS filesystem)
find_package(Boost CONFIG REQUIRED filesystem)
hunter_add_package(GTest)
find_package(GTest CONFIG REQUIRED)

add_library(ftp-explorer-lib STATIC
        ${CMAKE_CURRENT_SOURCE_DIR}/sources/ftp-explorer-lib.cpp
        )
file(GLOB TEST_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/tests/*.cpp")
add_executable(tests ${TEST_SOURCES})
add_executable(ftp-explorer-app ${CMAKE_CURRENT_SOURCE_DIR}/sources/main.cpp)

target_include_directories(ftp-explorer-lib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(ftp-explorer-app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)

target_link_libraries(ftp-explorer-lib PUBLIC Boost::filesystem)
target_link_libraries(tests PRIVATE GTest::gmock_main ftp-explorer-lib)
target_link_libraries(ftp-explorer-app PRIVATE GTest::gmock_main template)

enable_testing()
add_test(NAME unit_tests COMMAND tests)

if(BUILD_COVERAGE)
  function(ENABLE_PROJECT_COVERAGE PROJECT)
    target_compile_options(${PROJECT} INTERFACE -O0 -g --coverage)
    if (CMAKE_VERSION VERSION_GREATER_EQUAL 3.13)
      target_link_options(${PROJECT} INTERFACE --coverage)
    else()
      target_link_libraries(${PROJECT} INTERFACE --coverage)
    endif()
  endfunction()

  set(ENABLE_COVERAGE ON CACHE BOOL "Enable coverage build." FORCE)
  list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/tools/CMake-codecov/cmake")
  find_package(codecov)
  enable_project_coverage(ftp-explorer-lib)
  enable_project_coverage(tests)
  list(APPEND LCOV_REMOVE_PATTERNS "'${PROJECT_SOURCE_DIR}/tests/*'")
  coverage_evaluate()
endif()
